--- a/Hi_page1.html
+++ b/Hi_page1.html
@@ -6,6 +6,7 @@
 		<h1> Welcome to Page1 </h1>
 		<button> Press </button>
 		<h2> Welcome </h2>
+		<p> This is a page to perform git hub training </p>
 	</body>
 
 
