--- a/Hi_page1.html
+++ b/Hi_page1.html
@@ -3,7 +3,7 @@
 <head> Hello World </head>
 
 	<body>
-		<h1> Welcome to Page1 </h1>
+	<center>	<h1> Welcome to Page1 </h1> </center>
 		<button> Press </button>
 		<h2> Welcome </h2>
 		<p> This is a page to perform git hub training </p>
