--- a/Hi_page1.html
+++ b/Hi_page1.html
@@ -4,8 +4,8 @@
 
 	<body>
 		<h1> Welcome to Page1 </h1>
-		<button> Press </button>
 		<h2> Welcome </h2>
+		<h3> Welcome h3 </h3>
 		<p> This is a page to perform git hub training </p>
 	</body>
 
